--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -12,7 +12,7 @@
                     <div class='elements'>
                         <form method="post">
                             {%csrf_token%}
-                            <h1>계정 생성하기</h1>
+                            <h2>계정 생성하기</h2>
                             <div class = "login_span">
                                 
                             </div>
@@ -29,7 +29,7 @@
             <div class="sign-in-container">
                 <div class="login_form">
                     <div class='elements'>
-                        <h1>로그인</h1>
+                        <h2>로그인</h2>
                         <div class = "login_span">
                             소셜 로그인 또는 사이트 로그인을 해주세요.
                         </div>
@@ -55,9 +55,9 @@
             </div>
             <div class="overlay-container">
                 <div class="overlay-left">
-                    <h1>환영합니다!</h1>
+                    <h2>환영합니다!</h2>
                     <div class = "login_detail">
-                        <p>회원정보를 입력해 가입을 진행해주세요.</p>
+                        <p>회원정보를 입력해주세요.</p>
                     </div>
                     <button id="signIn" class="overlay_btn">로그인</button>
                 </div>
