--- a/GoodPT/mypage/templates/mypage/mypage.html
+++ b/GoodPT/mypage/templates/mypage/mypage.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %} 
+{% block content %}
 <div class="container page-body" id="layout_container">
     <div class="row">
         <div class="col-sm-12" style="margin-top: 150px">
