--- a/GoodPT/board/templates/board/question_list.html
+++ b/GoodPT/board/templates/board/question_list.html
@@ -3,9 +3,14 @@
 {% block content %}
 <style>
     #qnaboard {
-    background-color: #6671a4;
-    color: white;
-}
+        background-color: #6671a4;
+        color: white;
+    }
+    
+    .page-item.active .page-link {
+        background-color: #6671a4 !important;
+        border: #6671a4;
+    }
 
 </style>
 <div class="container my-3">
@@ -14,12 +19,12 @@
             {% if user.is_authenticated %}
             <a href="{% url 'board:question_create' %}" class="btn btn-primary">질문 등록하기</a>
             {% else %}
-            <a class="btn btn-primary" href="/login">로그인 후 이용가능</a>
+            <a class="btn btn-primary" href="/login" style="background-color: #6671a4; border: #6671a4;">로그인 후 이용가능</a>
             {% endif %}
         </div>
         <div class="col-6" style="margin-top: 150px">
             <div class="input-group">
-                <input type="text" id="search_kw" class="form-control" value="{{ kw|default_if_none:'' }}">
+                <input type="text" id="search_kw" class="form-control" value="{{ kw|default_if_none:'' }}"  style="margin-right: 10px;">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
                 </div>
