--- a/GoodPT/mypage/templates/mypage/password_change_form.html
+++ b/GoodPT/mypage/templates/mypage/password_change_form.html
@@ -1,13 +1,19 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h2>암호 변경</h2>
-    <form action="" method="post">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table}}
-        </table>
-        <input type="submit" />
-    </form>
+<div class="container page-body" id="layout_container">
+    <div class="row">
+        <div class="col-sm-12" style="margin-top: 150px">
+            <h2>암호 변경</h2>
+            <form action="" method="post">
+                {% csrf_token %}
+                <table>
+                    {{ form.as_table}}
+                </table>
+                <input type="submit" />
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
