--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -40,22 +40,22 @@
       <div class="row align-items-center mt-5">
         <div class="col-md-5 col-lg-6 order-md-1 order-0"><img class="w-100" src="{% static '/img/gallery/join-us.png' %}" alt="" /></div>
         <div class="col-md-7 col-lg-6 pe-lg-4 pe-xl-7">
-          <div class="d-flex align-items-start"><img class="me-4" src="{% static '/img/icons/give-a-care.png' %}" alt="" width="30" />
+          <div class="d-flex align-items-start"><img class="me-4" src="{% static '/img/icons/creative.png' %}" alt="" width="30" />
             <div class="flex-1">
-              <h5> 발표 역량 </h5>
+              <h5> 발표력 </h5>
               <p class="text-muted mb-4">Beside the support we provide you with various tools to be able to host and manage your websites</p>
             </div>
           </div>
-          <div class="d-flex align-items-start"><img class="me-4" src="{% static '/img/icons/tweak-as-you.png' %}" alt="" width="30" />
+          <div class="d-flex align-items-start"><img class="me-4" src="{% static '/img/icons/confidence.png' %}" alt="" width="30" />
             <div class="flex-1">
               <h5> 자신감 </h5>
               <p class="text-muted mb-4">Be able to customize your plan over time if needed so you pay only for what you use</p>
             </div>
           </div>
-          <div class="d-flex align-items-start"><img class="me-4" src="{% static '/img/icons/security.png' %}" width="30" alt="..." />
+          <div class="d-flex align-items-start"><img class="me-4" src="{% static '/img/icons/creativity.png' %}" width="30" alt="..." />
             <div class="flex-1">
-              <h5>SECURITY AT ITS BEST</h5>
-              <p>We are the most reliable service provider, ready to give you a helping hand the fastest way possible 24/7</p>
+              <h5> 창의력 </h5>
+              <p class="text-muted mb-4">We are the most reliable service provider, ready to give you a helping hand the fastest way possible 24/7</p>
             </div>
           </div>
         </div>
