fix: 보드 padding 수정

--- a/GoodPT/mypage/templates/mypage/password_change_form.html
+++ b/GoodPT/mypage/templates/mypage/password_change_form.html
@@ -10,7 +10,7 @@
                 <table>
                     {{ form.as_table}}
                 </table>
-                <input type="submit" />
+                <input type="submit" class="btn btn-primary"/>
             </form>
         </div>
     </div>
