--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="{% static 'theme-rtl.min.css' %}">
     <link rel="stylesheet" href="{% static 'theme.css' %}">
     <link rel="stylesheet" href="{% static 'theme.min.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 
     <!-- ===============================================-->
   </head>
@@ -72,11 +73,6 @@
       <!-- <section> begin ============================-->
       <div>
         {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
         {% endif %} {% block content %} {% endblock %}
       </div>
 
