--- a/GoodPT/board/templates/form_errors.html
+++ b/GoodPT/board/templates/form_errors.html
@@ -1,5 +1,5 @@
 {% if form.errors %}
-<div class="alert alert-danger" style="margin-top: 150px">
+<div class="alert alert-danger">
     {% for field in form %} {% if field.errors %}
     <div>
         <strong>{{ field.label }}</strong>
