--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -99,7 +99,7 @@
             <textarea {% if not user.is_authenticated %}disabled{% endif %}
                       name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
-        <input type="submit" value="답변등록" class="btn btn-primary" />
+        <input type="submit" value="답변등록" class="btn btn-primary" style="background-color:#6671a4; border:#6671a4;"/>
     </form>
 </div>
 {% endblock %} {% block script %}
