--- a/GoodPT/board/templates/board/question_list.html
+++ b/GoodPT/board/templates/board/question_list.html
@@ -17,7 +17,7 @@
     <div class="row my-3" >
         <div class="col-6" style="margin-top: 150px">
             {% if user.is_authenticated %}
-            <a href="{% url 'board:question_create' %}" class="btn btn-primary">질문 등록하기</a>
+            <a href="{% url 'board:question_create' %}" class="btn btn-primary" style="background-color:#6671a4; border:#6671a4;">질문 등록하기</a>
             {% else %}
             <a class="btn btn-primary" href="/login" style="background-color: #6671a4; border: #6671a4;">로그인 후 이용가능</a>
             {% endif %}
