fix: 패스워드 변경 디자인, 보드 width조정

--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} 
 {% load board_filter %}
 {% block content %}
-<div class="container my-3">
+<div class="container my-3" id="question_detail">
     <!-- message 표시 -->
     {% if messages %}
     <div class="alert alert-danger my-3" role="alert">
