--- a/GoodPT/board/templates/board/question_list.html
+++ b/GoodPT/board/templates/board/question_list.html
@@ -13,7 +13,7 @@
     }
 
 </style>
-<div class="container my-3">
+<div class="container my-3" id="question_list">
     <div class="row my-3"  >
         <div class="col-6"style="margin-top: 80px">
             {% if user.is_authenticated %}
