--- a/GoodPT/board/templates/board/answer_form.html
+++ b/GoodPT/board/templates/board/answer_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container my-3">
+<div class="container my-3" id="answer_form">
     <form method="post">
         {% csrf_token %}
         {% include "form_errors.html" %}
