--- a/GoodPT/static/style.css
+++ b/GoodPT/static/style.css
@@ -8,3 +8,9 @@ nav{
 body {
     padding-top: 90px;
 }
+#mypage_container,#pw_container{
+    width: 50%;
+}
+#question_list,#question_detail,#question_form,#answer_form{
+    width: 60%;
+}
