--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -10,7 +10,7 @@
     }
   </style>
 
-  <section id="home">
+  <section id="home" style="padding-top:4rem; padding-bottom:4rem;">
     <div class="bg-holder" style="background-image:url({% static '/img/gallery/hero.png' %});background-position:center;background-size:cover;">
     </div>
     <!--/.bg-holder-->
