--- a/GoodPT/board/templates/board/answer_form.html
+++ b/GoodPT/board/templates/board/answer_form.html
@@ -9,7 +9,7 @@
             <textarea class="form-control" name="content" id="content"
                       rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">저장하기</button>
+        <button type="submit" class="btn btn-secondary">저장하기</button>
     </form>
 </div>
 {% endblock %}
