--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} 
+{% extends "base.html" %} 
 {% load board_filter %}
 {% block content %}
 <div class="container my-3" id="question_detail" style="margin-top: 80px">
@@ -16,14 +16,14 @@
         {% endfor %}
     {% endif %}
     <!-- 질문 -->
-    <h2 class="border-bottom py-2"style="margin-top: 80px">{{ question.subject }}</h2>
+    <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text">{{ question.content|mark }}</div>
             <div class="d-flex justify-content-end">
                 {% if question.modify_date %}
                 <div class="badge bg-light text-dark p-2 text-start mx-3">
-                    <div class="mb-2">(수정됨)</div>
+                    <div class="mb-2">modified at</div>
                     <div>{{ question.modify_date }}</div>
                 </div>
                 {% endif %}
@@ -33,95 +33,208 @@
                 </div>
             </div>
             <div class="my-3">
-                <a
-                    href="javascript:void(0)"
-                    data-uri="{% url 'board:question_vote' question.id  %}"
-                    class="recommend btn btn-sm btn-outline-secondary"
-                >
-                    추천
+                <a href="javascript:void(0)" data-uri="{% url 'board:vote_question' question.id  %}"
+                   class="recommend btn btn-sm btn-outline-secondary"> 추천
                     <span class="badge rounded-pill bg-success">{{question.voter.count}}</span>
                 </a>
                 {% if request.user == question.author %}
-                <a href="{% url 'board:question_modify' question.id  %}" class="btn btn-sm btn-outline-secondary"
-                    >수정</a
-                >
-                <a
-                    href="javascript:void(0)"
-                    class="delete btn btn-sm btn-outline-secondary"
-                    data-uri="{% url 'board:question_delete' question.id  %}"
-                    >삭제</a
-                >
+                <a href="{% url 'board:question_modify' question.id  %}"
+                   class="btn btn-sm btn-outline-secondary">수정</a>
+                <a href="javascript:void(0)" class="delete btn btn-sm btn-outline-secondary"
+                   data-uri="{% url 'board:vote_question' question.id  %}">삭제</a>
                 {% endif %}
             </div>
         </div>
     </div>
-    <!-- 답변 -->
-    <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
-    {% for answer in question.answer_set.all %}
-    <div class="card my-3">
-        <div class="card-body">
-            <div class="card-text">{{ answer.content|mark }}</div>
-            <div class="d-flex justify-content-end">
-                {% if answer.modify_date %}
-                <div class="badge bg-light text-dark p-2 text-start mx-3">
-                    <div class="mb-2">modified at</div>
-                    <div>{{ answer.modify_date }}</div>
-                </div>
-                {% endif %}
-                <div class="badge bg-light text-dark p-2 text-start">
-                    <div class="mb-2">{{ answer.author.username }}</div>
-                    <div>{{ answer.create_date }}</div>
-                </div>
-            </div>
-            <div class="my-3">
-                <a
-                    href="javascript:void(0)"
-                    data-uri="{% url 'board:answer_vote' answer.id  %}"
-                    class="recommend btn btn-sm btn-outline-secondary"
-                >
-                    추천
-                    <span class="badge rounded-pill bg-success">{{answer.voter.count}}</span>
-                </a>
-                {% if request.user == answer.author %}
-                <a href="{% url 'board:answer_modify' answer.id  %}" class="btn btn-sm btn-outline-secondary">수정</a>
-                <a
-                    href="#"
-                    class="delete btn btn-sm btn-outline-secondary"
-                    data-uri="{% url 'board:answer_delete' answer.id  %}"
-                    >삭제</a
-                >
-                {% endif %}
-            </div>
-        </div>
+
+<!-- 답변 표시 Start -->
+<a id="answer_start"></a>
+<div class="row justify-content-between border-bottom my-3">
+    <div class="col-4 py-2">
+        <h5>{{ answer_set.paginator.count }}개의 답변이 있습니다.</h5>
     </div>
-    {% endfor %}
-    <!-- 답변 등록 -->
-    <form action="{% url 'board:answer_create' question.id %}" method="post" class="my-3">
-        {% csrf_token %} {% include "form_errors.html" %}
-        <div class="mb-3">
-            <label for="content" class="form-label">답변내용</label>
-            <textarea {% if not user.is_authenticated %}disabled{% endif %}
-                      name="content" id="content" class="form-control" rows="10"></textarea>
-        </div>
-        <input type="submit" value="답변등록" class="btn btn-primary" style="background-color:#6671a4; border:#6671a4;"/>
-    </form>
+    <div class="col-2">
+        <select class="form-control so">
+            <option value="recommend" {% if so == 'recommend' %}selected{% endif %}>추천순</option>
+            <option value="recent" {% if so == 'recent' %}selected{% endif %}>최신순</option>
+        </select>
+    </div>
 </div>
-{% endblock %} {% block script %}
-<script type="text/javascript">
-    const delete_elements = document.getElementsByClassName('delete');
-    Array.from(delete_elements).forEach(function (element) {
-        element.addEventListener('click', function () {
-            if (confirm('삭제하시겠습니까?')) {
-                location.href = this.dataset.uri;
+
+{% for answer in answer_set %}
+<a id="answer_{{ answer.id }}"></a>
+
+<div class="row my-3">
+    <div class="col-1">  <!-- 추천 영역 -->
+        <a href="#" data-uri="{% url 'board:vote_answer' answer.id %}?page={{ page }}&so={{ so }}"
+           class="recommend btn btn-sm btn-secondary btn btn-block my-1">추천</a>
+        <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{ answer.voter.count }}</div>
+    </div>
+    <div class="col-11">  <!-- 답변 영역 -->
+        <div class="card">
+            <div class="card-body">
+                <!-- 답변 내용 표시 -->
+                <div class="card-text">{{ answer.content|mark }}</div>
+                <!-- 답변 일시&저자 표시 -->
+                <div class="d-flex justify-content-end">
+                    {% if answer.modify_date %}
+                    <div class="badge badge-light p-2 text-left mx-3">
+                        <div class="mb-2">modified at</div>
+                        <div>{{ answer.modify_date }}</div>
+                    </div>
+                    {% endif %}
+                    <div class="badge badge-light p-2 text-left">
+                        <div class="mb-2">{{ answer.author.username }}</div>
+                        <div>{{ answer.create_date }}</div>
+                    </div>
+                </div>
+                <!-- 답변 수정&삭제 버튼 표시 -->
+                {% if request.user == answer.author %}
+                <div class="my-3">
+                    <a href="#" data-uri="{% url 'board:answer_modify' answer.id %}"
+                       class="next btn btn-sm btn-outline-secondary">수정</a>
+                    <a href="#" class="delete btn btn-sm btn-outline-secondary"
+                       data-uri="{% url 'board:answer_delete' answer.id %}">삭제</a>
+                </div>
+                {% endif %}
+                <!-- 답변 댓글 Start -->
+                {% if answer.comment_set.count > 0 %}
+                <div class="mt-3">
+                    {% for comment in answer.comment_set.all %}  <!-- 등록한 댓글을 출력 -->
+                    <a id="comment_{{ comment.id }}"></a>
+                    <div class="comment py-2 text-muted">  <!-- 댓글 각각에 comment 스타일 지정 -->
+                        <span style="white-space: pre-line;">{{ comment.content }}</span>
+                        <span>
+                            - {{ comment.author }}, {{ comment.create_date }}
+                            {% if comment.modify_date %}
+                            (수정:{{ comment.modify_date }})
+                            {% endif %}
+                        </span>
+                        {% if request.user == comment.author %}
+                            <a href="#" class="small next" data-uri="{% url 'board:comment_modify_answer' comment.id %}">수정</a>,
+                            <a href="#" class="small delete" data-uri="{% url 'board:comment_delete_answer' comment.id %}?page={{ page }}&so={{ so }}">삭제</a>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
+                <!-- 댓글 추가 링크 -->
+                <div>
+                    <a href="#" data-uri="{% url 'board:comment_create_answer' answer.id %}"
+                       class="small next"><small>댓글 추가 ..</small></a>
+                </div>
+                <!-- 답변 댓글 End -->
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
+<!-- 답변 표시 End -->
+<!-- 페이징처리 시작 -->
+<ul class="pagination justify-content-center">
+    <!-- 이전페이지 -->
+    {% if answer_set.has_previous %}
+        <li class="page-item">
+            <a class="page-link" data-page="1" href="#">처음</a>
+        </li>
+       <li class="page-item">
+            <a class="page-link" data-page="{{ answer_set.previous_page_number }}" href="#">이전</a>
+        </li>
+    {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">처음</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+        </li>
+    {% endif %}
+    <!-- 페이지리스트 -->
+    {% for page_number in answer_set.paginator.page_range %}
+        {% if page_number >= answer_set.number|add:-4 and page_number <= answer_set.number|add:4 %}
+            {% if page_number == answer_set.number %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" data-page="{{ page_number }}" href="#">{{ page_number }}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" data-page="{{ page_number }}" href="#">{{ page_number }}</a>
+            </li>
+            {% endif %}
+        {% endif %}
+    {% endfor %}
+    <!-- 다음페이지 -->
+    {% if answer_set.has_next %}
+        <li class="page-item">
+             <a class="page-link" data-page="{{ answer_set.next_page_number }}" href="#">다음</a>
+        </li>
+        <li class="page-item">
+             <a class="page-link" data-page="{{ answer_set.paginator.num_pages }}" href="#">끝</a>
+        </li>
+    {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">끝</a>
+        </li>
+    {% endif %}
+</ul>
+
+<!-- 답변 등록폼 Start -->
+<form action="{% url 'board:answer_create' question.id %}?so={{ so }}" method="post" class="my-3">
+    {% csrf_token %}
+    <!-- 오류표시 Start -->
+    {% if form.errors %}
+    <div class="alert alert-danger" role="alert">
+        {% for field in form %}
+            {% if field.errors %}
+            <strong>{{ field.label }}</strong>
+            {{ field.errors }}
+            {% endif %}
+        {% endfor %}
+    </div>
+    {% endif %}
+    <!-- 오류표시 End -->
+    <div class="form-group">
+        <textarea {% if not user.is_authenticated %} disabled {% endif %}
+                  name="content" id="content" class="form-control" rows="10"></textarea>
+    </div>
+        <input type="submit" value="답변등록" class="btn btn-primary">
+</form>
+<!-- 답변 등록폼 End -->
+
+<form id="searchForm" method="get" action="{{ question.get_absolute_url }}#answer_start">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+    <input type="hidden" id="so" name="so" value="{{ so }}">
+</form>
+{% endblock %}
+
+{% block script %}
+<script type='text/javascript'>
+    $(document).ready(function(){
+        $(".delete").on('click', function() {
+            if(confirm("정말 삭제하시겠습니까?")) {
+                location.href = $(this).data('uri');
             }
         });
-    });
-    const recommend_elements = document.getElementsByClassName('recommend');
-    Array.from(recommend_elements).forEach(function (element) {
-        element.addEventListener('click', function () {
-            if (confirm('추천하시겠습니까?')) {
-                location.href = this.dataset.uri;
+        $(".recommend").on('click', function() {
+            if(confirm("정말 추천하시겠습니까?")) {
+                location.href = $(this).data('uri');
             }
+        });
+
+        $(".page-link").on('click', function() {
+            $("#page").val($(this).data("page"));
+            $("#searchForm").submit();
+        });
+        $(".so").on('change', function() {
+            $("#so").val($(this).val());
+            $("#page").val(1);  // 새로운 기준으로 정렬할 경우 1페이지부터 조회한다.
+            $("#searchForm").submit();
+        });
+        $(".next").on('click', function() {  // query string을 다음 url에 포함시킨다.
+            $("#searchForm").attr('action', $(this).data('uri'))
+            $("#searchForm").submit();
         });
     });
 </script>
