--- a/GoodPT/board/templates/form_errors.html
+++ b/GoodPT/board/templates/form_errors.html
@@ -1,15 +1,15 @@
 {% if form.errors %}
-<div class="alert alert-danger">
-    {% for field in form %} {% if field.errors %}
-    <div>
-        <strong>{{ field.label }}</strong>
-        {{ field.errors }}
-    </div>
-    {% endif %} {% endfor %} {% for error in form.non_field_errors %}
-    <!-- 넌필드 오류를 출력한다. -->
-    <div>
-        <strong>{{ error }}</strong>
-    </div>
+    {% for field in form %}
+        {% for error in field.errors %}  <!-- 필드 오류를 출력한다. -->
+            <div class="alert alert-danger">
+                <strong>{{ field.label }}</strong>
+                {{ error }}
+            </div>
+        {% endfor %}
     {% endfor %}
-</div>
+    {% for error in form.non_field_errors %}   <!-- 넌필드 오류를 출력한다. -->
+        <div class="alert alert-danger">
+            <strong>{{ error }}</strong>
+        </div>
+    {% endfor %}
 {% endif %}
