--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static '/img/illustrations/hero-header.png' %}" alt="..." /></div>
         <div class="col-md-7 col-lg-6 text-md-start text-center">
           <h1 class="text-light fs-md-5 fs-lg-6">Get a Confidence</h1>
-          <p class="text-light">with Good-PT</p><a class="btn btn-primary" href="#" role="button">Start Presentation</a>
+          <p class="text-light">with Good-PT</p><a class="btn btn-primary" href="/presentation" role="button">Start Presentation</a>
         </div>
       </div>
     </div>
