--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -75,8 +75,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-xxl-5 text-center mx-auto mb-5">
-          <h2>Don't know where to start from?</h2>
-          <p class="mb-5">We've got the best articles,tools and resources to help you to start</p>
+          <h2>발표력, 왜 중요할까?</h2>
+          <p class="mb-5">나의 생각을 전달하고 상대를 설득시키는 발표, Good-PT와 함께 해요.</p>
         </div>
       </div>
       <div class="row h-100">
