--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -82,11 +82,11 @@
 
         <div class="container">
           <div class="row align-items-center justify-content-xl-between py-5 border-klean">
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/robinhood.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/reddit.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/upcase.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/hubspot.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/tunein.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/django.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/bootstrap.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/python.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/opencv.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/openai.png' %}" height="40" alt="..." /></div>
           </div>
         </div>
         <!-- end of .container-->
