--- a/GoodPT/static/camera.css
+++ b/GoodPT/static/camera.css
@@ -44,3 +44,24 @@
     display : none;
 }
 
+.pmodal-background{
+    position : absolute;
+    width : 100%;
+    height : 100%;
+    background: transparent;
+    display : flex;
+    align-items : center;
+    justify-content: center;
+}
+
+.pmodal-container{
+    position : absolute;
+    width : 50%;
+    height : 20%;
+    background: white;
+    z-index : 1;
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
