--- a/GoodPT/presentation/templates/presentation.html
+++ b/GoodPT/presentation/templates/presentation.html
@@ -6,6 +6,9 @@
     <div class = "pmodal-background">
         <div class = "pmodal-container">
             <h1>사용방법</h1>
+            <p>1.녹화버튼을 눌러주세요.</p>
+            <p>2.녹화완료후 자신의 영상을 확인해주세요.</p>
+            <p>3.분석하기 버튼을 눌러주세요.</p>
         </div>
     </div>        
     <div class="video-container">            
