--- a/GoodPT/static/style.css
+++ b/GoodPT/static/style.css
@@ -1,4 +1,4 @@
-nav{
+#main_nav {
     position: fixed;
     top: 0;
     /* width: 100% */
@@ -8,6 +8,7 @@ nav{
 body {
     padding-top: 90px;
 }
-#mypage_container,#pw_container{
+#mypage_container,
+#pw_container {
     width: 50%;
 }
