--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static '/img/illustrations/hero-header.png' %}" alt="..." /></div>
         <div class="col-md-7 col-lg-6 text-md-start text-center">
           <h1 class="text-light fs-md-5 fs-lg-6">Get a Confidence</h1>
-          <p class="text-light">with Good-PT</p><a class="btn btn-primary" href="#" role="button">Start Presentation</a>
+          <p class="text-light">with Good-PT</p><a class="btn btn-primary" href="/presentation" role="button">Start Presentation</a>
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="col-lg-6 col-xxl-5 text-center mx-auto mb-5">
           <h2>발표력, 왜 중요할까?</h2>
-          <p class="mb-5">나의 생각을 전달하고 상대를 설득시키는 발표, Good-PT와 함께 해요.</p>
+          <p class="mb-5">자신의 생각을 전달하고 상대를 설득시키는 발표, Good-PT와 함께 해요.</p>
         </div>
       </div>
       <div class="row h-100">
