--- a/GoodPT/board/templates/base.html
+++ b/GoodPT/board/templates/base.html
@@ -44,6 +44,7 @@
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" href="/">Home</a></li>
+              <li class="nav-item px-2" ><a class="nav-link" href="/presentation">Presentation</a></li>
               <li class="nav-item px-2" ><a class="nav-link" href="{% url 'board:index' 'qna' %}">Board</a></li>
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#help">Help</a></li>
             </ul>
@@ -88,11 +89,11 @@
 
         <div class="container">
           <div class="row align-items-center justify-content-xl-between py-5 border-klean">
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/robinhood.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/reddit.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/upcase.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/hubspot.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/tunein.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/django.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/bootstrap.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/python.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/opencv.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/openai.png' %}" height="40" alt="..." /></div>
           </div>
         </div>
         <!-- end of .container-->
