--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -47,8 +47,11 @@
               <li class="nav-item px-2"><a class="nav-link" href="/">Home</a></li>
               <li class="nav-item px-2" ><a class="nav-link" href="/presentation">Presentation</a></li>
               <li class="nav-item px-2" ><a class="nav-link" href="{% url 'board:index' 'qna' %}">Board</a></li>
+              {% if request.resolver_match.app_name == 'presentation' %}
+              {% else %}
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#pricingTable">Price</a></li>
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#team">Team</a></li>
+              {% endif %}
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#help">Help</a></li>
             </ul>
             {% if user.is_authenticated %}
